gcc/testsuite/rust/rustc/ui/traits/trait-alias/trait-alias-impl.rs
#![feature(trait_alias)]

trait DefaultAlias = Default;

impl DefaultAlias for () {} // { dg-error ".E0404." "" { target *-*-* } }

fn main() {}

